fix(alert): etu-45159 fix center align on alerts without title

--- a/packages/alert/src/BaseAlertBox.scss
+++ b/packages/alert/src/BaseAlertBox.scss
@@ -118,6 +118,11 @@
     }
   }
 
+  &--no-title {
+    display: flex;
+    align-items: center;
+  }
+
   &__icon {
     display: inline-block;
     flex: 0 0 1em;
@@ -144,7 +149,6 @@
     word-break: break-word;
     hyphens: auto;
 
-    &--no-title,
     &--no-children {
       display: flex;
       align-items: center;
